# Quant

./: .gitignore  ARCHITECTURE.md  CHECKLIST.md  Cargo.toml  README.md  Run_Quant_System.bat  SYSTEM_ERRORS_LOG.md  check_redis_live.py  setup_questdb.ps1  setup_questdb_native.ps1
.claude/: settings.local.json
crates/data-ingestion/: Cargo.toml
crates/data-ingestion/src/: error.rs  feed.rs  lib.rs  main.rs  parser.rs  questdb.rs  redis_store.rs  types.rs
crates/execution-engine/: Cargo.toml
crates/execution-engine/src/: almgren_chriss.rs  error.rs  gateway.rs  kelly.rs  kill_switch.rs  lib.rs  main.rs  oms.rs  redis_bridge.rs
crates/strategy-engine/: Cargo.toml
crates/strategy-engine/src/: engine.rs  garch.rs  gbm.rs  lib.rs  onnx_inference.rs  ou_model.rs  pyo3_bridge.rs  signal.rs
crates/web-dashboard/: Cargo.toml
crates/web-dashboard/src/: config.rs  lib.rs  main.rs
crates/web-dashboard/src/audit/: logger.rs  mod.rs
crates/web-dashboard/src/auth/: jwt.rs  middleware.rs  mod.rs
crates/web-dashboard/src/bridge/: engine_bridge.rs  exec_bridge.rs  feed_bridge.rs  mod.rs
crates/web-dashboard/src/routes/: audit.rs  auth.rs  config.rs  kill_switch.rs  mod.rs  models.rs  orders.rs  pairs.rs  positions.rs  signals.rs  status.rs
crates/web-dashboard/src/ws/: channels.rs  handler.rs  mod.rs  throttle.rs
docs/: IMPLEMENTATION_BLUEPRINT.md  WEBAPP_ARCHITECTURE.md  WEBAPP_CHECKLIST.md
files/: Cargo.toml  error.rs  feed.rs  lib.rs  main.rs  parser.rs
files2/: engine.rs  features.rs  kalman.rs
files3/: Cargo.toml  executor.rs  oms.rs  risk.rs
infra/: cpu_isolation.sh
research/: __init__.py  export_research_dataset.py  llm_regime_engine.py  pyproject.toml  run_30_backtests.py  run_llm_loop.bat  signal_bridge.py  test_order.py  test_upbit_connectivity.py
research/backtesting/: __init__.py  altcoin_engine.py  engine.py
research/data/: binance_fetcher.py
research/data_lake/: __init__.py  store.py
research/models/: __init__.py  cointegration.py  garch.py  ml_training.py
research/strategies/: __init__.py  atr_breakout.py  bollinger_reversion.py  btc_divergence.py  ema_momentum.py  ensemble.py  funding_reversion.py  position_sizing.py
research/tests/: test_binance_fetcher.py  test_models.py
webapp/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
webapp/src/app/: globals.css  layout.tsx
webapp/src/app/(dashboard)/: layout.tsx  page.tsx
webapp/src/app/(dashboard)/execution/: page.tsx
webapp/src/app/(dashboard)/execution/fills/: page.tsx
webapp/src/app/(dashboard)/execution/orders/: page.tsx
webapp/src/app/(dashboard)/logs/: page.tsx
webapp/src/app/(dashboard)/market/: page.tsx
webapp/src/app/(dashboard)/market/[symbol]/: page.tsx
webapp/src/app/(dashboard)/research/: page.tsx
webapp/src/app/(dashboard)/risk/: page.tsx
webapp/src/app/(dashboard)/risk/kill-switch/: page.tsx
webapp/src/app/(dashboard)/settings/: page.tsx
webapp/src/app/(dashboard)/settings/api-keys/: page.tsx
webapp/src/app/(dashboard)/settings/parameters/: page.tsx
webapp/src/app/(dashboard)/strategy/: page.tsx
webapp/src/app/(dashboard)/strategy/pairs/: page.tsx
webapp/src/app/(dashboard)/strategy/signals/: page.tsx
webapp/src/app/login/: page.tsx
webapp/src/components/common/: ConfirmDialog.tsx  DataTable.tsx  SliderInput.tsx
webapp/src/components/dashboard/: ActiveOrders.tsx  PnlCard.tsx  PositionSummary.tsx  RiskSummary.tsx  SignalFeed.tsx  SystemHealth.tsx
webapp/src/components/layout/: ConnectionStatus.tsx  Header.tsx  Sidebar.tsx
webapp/src/components/market/: ModelPanel.tsx  OrderBook.tsx  PriceChart.tsx  TradeHistory.tsx
webapp/src/components/strategy/: ModelConfigPanel.tsx  PairTable.tsx  SignalConfigPanel.tsx
webapp/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
webapp/src/lib/: api.ts  formatters.ts  ws.ts
webapp/src/stores/: tradingStore.ts
webapp/src/types/: api.ts  index.ts  trading.ts  ws.ts
