[package]
name = "data-ingestion"
version = "0.1.0"
edition = "2021"

[dependencies]
# 비동기 런타임 & WebSocket
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# SPSC 링 버퍼 (lock-free)
rtrb = "0.3"

# 직렬화 / JSON 파싱
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# URL 파싱
url = "2"

# 에러 체인
thiserror = "1"

# 로깅 / 트레이싱
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Ctrl+C 시그널 핸들링 (main 바이너리용)
ctrlc = { version = "3", features = ["termination"] }

# Redis (실시간 Tick Data 저장 — §5.1)
redis = { version = "0.25", features = ["tokio-comp", "streams"] }

# QuestDB (Historical Data — §5.1)
# ILP: TCP 직접 통신, Reader: PostgreSQL 프로토콜
tokio-postgres = "0.7"

# Upbit WebSocket feed
uuid = { version = "1", features = ["v4"] }
log = "0.4"

# Environment variable loading
dotenvy = "0.15"
