[package]
name = "execution-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
data-ingestion = { path = "../data-ingestion" }
strategy-engine = { path = "../strategy-engine" }
thiserror = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam-channel = "0.5"

# Gateway 의존성 (§4.3 거래소 API 통신)
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = "0.4"
jsonwebtoken = "9"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["full", "time"] }
urlencoding = "2.1"
serde_urlencoded = "0.7"
log = "0.4"
env_logger = "0.11"
redis = { version = "0.25", features = ["tokio-comp"] }
futures-util = "0.3"
